--- a/src/targets/mobile/fastlane/metadata/ios/en-US/release_notes.txt
+++ b/src/targets/mobile/fastlane/metadata/ios/en-US/release_notes.txt
@@ -1,6 +1,3 @@
-Thanks for using Cozy Banks. In this new version:
-• Infinite scrolling to easily go through your transaction history in the "mouvements" page;
-• A new design and a new date picker that ease your budget analysis on the "catégories" page;
-• New banks are available;
-• We improved synchronization;
-• From now on, the bank name is displayed on every transaction.
+Thank you for using Cozy Banks !
+This new version adds a new mobile menu to browse easily to your other Cozy apps and Cozy Home.
+We have also done a lot of work to improve the overall performance and stability of the app.
