feat: Show amounts in health bill notifications

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -397,7 +397,7 @@
         "title": "Nouveaux remboursements de santé",
         "content": {
           "title": "Remboursement de santé",
-          "treated_by": "dépense traitée par"
+          "treated_by": "Traité par"
         }
       }
     },
