feat(Configuration): Add local model override setting

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -411,8 +411,11 @@
   "CommunitySettings": {
     "title": "Community-based features",
     "auto_categorization": {
-      "title": "Automatic categorization of your transactions",
       "subtitle": "Help us improve the model by anonymously sharing your categorized transactions. <a href='https://support.cozy.io/article/181-collaboration-a-la-categorisation-bancaire' target='_blank'>More</a>"
+    },
+    "local_model_override": {
+      "title": "Automatic categorization of your transactions",
+      "subtitle": "Learn from my manual categorizations"
     }
   },
 
