--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -319,7 +319,8 @@
     "save": "Sauver",
     "included": "Inclus",
     "account-number": "Numéro du compte",
-    "total-balance": "Total"
+    "total-balance": "Total",
+    "deletion_error": "Une erreur est survenue lors de la suppression du groupe."
   },
 
 
