feat: Add a setting to show the balance history

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -520,5 +520,12 @@
 
   "LogoutModal": {
     "message": "Logout in progress..."
+  },
+
+  "ExperimentalFeatures": {
+    "title": "Experimental features",
+    "balance_history": {
+      "subtitle": "Balance history chart"
+    }
   }
 }
