feat(Configuration): Use TogglePane dumb components

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -421,17 +421,6 @@
     "configuration": "Configuration"
   },
 
-  "CommunitySettings": {
-    "title": "Fonctions communautaires",
-    "auto_categorization": {
-      "subtitle": "Participer à l'amélioration du modèle par le partage anonymisé de vos écritures catégorisées. <a href='https://support.cozy.io/article/181-collaboration-a-la-categorisation-bancaire' target='_blank'>En savoir plus</a>"
-    },
-    "local_model_override": {
-      "title": "Catégorisation automatique des écritures",
-      "subtitle": "Apprendre de mes catégorisations manuelles"
-    }
-  },
-
   "Onboarding": {
     "title": {
       "desktop": "Connecter vos comptes bancaires",
@@ -475,10 +464,22 @@
     "message": "Déconnexion en cours..."
   },
 
-  "ExperimentalFeatures": {
-    "title": "Fonctions expérimentales",
+  "AdvancedFeaturesSettings": {
+    "title": "Fonctions avancées",
+    "automatic_categorization": {
+      "title" :"Catégorisation automatique",
+      "local_model_override": {
+        "description": "Apprendre de mes catégorisations manuelles"
+      },
+      "auto_categorization": {
+        "description": "Participer à l'amélioration du modèle par le partage anonymisé de vos écritures catégorisées. <a href='https://support.cozy.io/article/181-collaboration-a-la-categorisation-bancaire' target='_blank'>En savoir plus</a>"
+      }
+    },
     "balance_history": {
-      "subtitle": "Courbe d'historique de solde"
+      "title": "Courbe d'historique de soldes",
+      "show_chart": {
+        "description": "Voir mon historique de soldes"
+      }
     }
   }
 }
