--- a/src/targets/mobile/fastlane/metadata/ios/en-US/release_notes.txt
+++ b/src/targets/mobile/fastlane/metadata/ios/en-US/release_notes.txt
@@ -1,6 +1,6 @@
-Thanks for using Cozy Banks. In this new version:
-• Infinite scrolling to easily go through your transaction history in the "mouvements" page;
-• A new design and a new date picker that ease your budget analysis on the "catégories" page;
-• New banks are available;
-• We improved synchronization;
-• From now on, the bank name is displayed on every transaction.
+Thanks for using Cozy Banks! In this new version you will find 2 advanced features : 
+- a balance history graph available on the app home page : you will discover how well you manage to save for the last year!
+- a better automatic categorization that learns from your manual recategorization : the next transactions will benefit from this learning!
+These features are brand new and we are still working on it. To be the first to test it go and activate them in the app settings.
+We also improved our notifications by email.
+Enjoy and let us know what you think of these new features!
