--- a/src/targets/mobile/fastlane/metadata/ios/fr-FR/release_notes.txt
+++ b/src/targets/mobile/fastlane/metadata/ios/fr-FR/release_notes.txt
@@ -1,6 +1,7 @@
-Du neuf pour vos pages mouvements et catégories !
-• Le défilement infini pour remonter votre historique en toute simplicité sur la page "mouvements";
-• Un nouveau design et un nouveau sélecteur de date pour la page "catégories" : pour une analyse plus facile et plus rapide de votre budget;
-• De nouvelles banques sont disponibles;
-• Nous avons amélioré la synchronisation;
-• Désormais, le nom de la banque s'affiche sur chaque opération.
+Merci d'utiliser Cozy Banks!
+Dans cette version nous vous mettons à disposition 2 fonctions avancées : 
+- Une courbe d'historique de vos soldes : Vous découvrirez la vie de vos comptes sur les 12 derniers mois
+- Une catégorisation automatique améliorée : les prochaines opérations seront mieux catégorisées en prenant en comptes vos recatégorisations manuelles.
+Ces deux fonctions sont toutes nouvelles, soyez les premiers testeurs en les activant depuis la page paramètres de l'app.
+Nous avons aussi amélioré le design de nos emails de notifications. 
+N'hésitez pas à nous donner votre avis !
