feat: Add placeholder

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -70,7 +70,9 @@
     "account_name": "Account name"
   },
   "SelectDates": {
-    "all_year": "All year"
+    "all_year": "All year",
+    "year": "Year",
+    "month": "Month"
   },
   "Accounts": {
     "account": "Account",
