feat(groups): Create virtual group for accounts alone and without type

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -118,7 +118,8 @@
       "credit card": "Credit card accounts",
       "liability": "Liability accounts",
       "none": "None",
-      "savings": "Savings accounts"
+      "savings": "Savings accounts",
+      "undefined": "Other accounts"
     },
     "categories": {
       "uncategorized": "To be categorized",
