--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -187,7 +187,7 @@
       "liability": "Comptes de dettes",
       "none": "Aucun type",
       "savings": "Comptes d'épargne",
-      "undefined": "Autres comptes"
+      "other": "Autres comptes"
     },
     "categories": {
       "uncategorized": "A catégoriser",
