--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -85,7 +85,9 @@
     "account_name": "Nom du compte",
     "solde": "Solde",
     "bank_name": "Nom de la banque",
-    "account_number": "Numéro du compte"
+    "account_number": "Numéro du compte",
+    "add_bank": "Ajouter une banque",
+    "manage_accounts": "Organiser mes comptes"
   },
 
   "Transactions": {
