--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -110,15 +110,32 @@
   },
   "Data": {
     "accountTypes": {
+      "article83": "Article83",
       "asset": "Assets accounts",
       "bank": "Bank accounts",
+      "capitalisation": "Capitalisatio accounts",
       "cash": "Cash accounts",
       "checkings": "Checking accounts",
+      "consumercredit": "Consumer credits",
       "creditcard": "Credit card accounts",
       "credit card": "Credit card accounts",
+      "deposit": "Deposit accounts",
+      "joint": "Joint accounts",
       "liability": "Liability accounts",
+      "lifeinsurance": "Life insurances",
+      "loan": "Loan accounts",
+      "madelin": "Madelin contracts",
+      "market": "Markets",
+      "mortgage": "Mortgages",
       "none": "None",
+      "pea": "PEA",
+      "pee": "PEE",
+      "perco": "PERCO",
+      "perp": "PERP",
+      "resolvingcredit": "Resolving credits",
+      "rsp": "RSP",
       "savings": "Savings accounts",
+      "unknown": "Unknown",
       "other": "Other accounts"
     },
     "categories": {
