refactor(groups): Don't lowercase type anymore

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -110,33 +110,33 @@
   },
   "Data": {
     "accountTypes": {
-      "article83": "Article83",
-      "asset": "Assets accounts",
-      "bank": "Bank accounts",
-      "capitalisation": "Capitalisatio accounts",
-      "cash": "Cash accounts",
-      "checkings": "Checking accounts",
-      "consumercredit": "Consumer credits",
-      "creditcard": "Credit card accounts",
-      "credit card": "Credit card accounts",
-      "deposit": "Deposit accounts",
-      "joint": "Joint accounts",
-      "liability": "Liability accounts",
-      "lifeinsurance": "Life insurances",
-      "loan": "Loan accounts",
-      "madelin": "Madelin contracts",
-      "market": "Markets",
-      "mortgage": "Mortgages",
-      "none": "None",
-      "pea": "PEA",
-      "pee": "PEE",
-      "perco": "PERCO",
-      "perp": "PERP",
-      "resolvingcredit": "Resolving credits",
-      "rsp": "RSP",
-      "savings": "Savings accounts",
-      "unknown": "Unknown",
-      "other": "Other accounts"
+      "Article83": "Article83",
+      "Asset": "Assets accounts",
+      "Bank": "Bank accounts",
+      "Capitalisation": "Capitalisatio accounts",
+      "Cash": "Cash accounts",
+      "Checkings": "Checking accounts",
+      "ConsumerCredit": "Consumer credits",
+      "CreditCard": "Credit card accounts",
+      "Credit Card": "Credit card accounts",
+      "Deposit": "Deposit accounts",
+      "Joint": "Joint accounts",
+      "Liability": "Liability accounts",
+      "LifeInsurance": "Life insurances",
+      "Loan": "Loan accounts",
+      "Madelin": "Madelin contracts",
+      "Market": "Markets",
+      "Mortgage": "Mortgages",
+      "None": "None",
+      "PEA": "PEA",
+      "PEE": "PEE",
+      "Perco": "PERCO",
+      "Perp": "PERP",
+      "ResolvingCredit": "Resolving credits",
+      "RSP": "RSP",
+      "Savings": "Savings accounts",
+      "Unknown": "Unknown",
+      "Other": "Other accounts"
     },
     "categories": {
       "uncategorized": "To be categorized",
