--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -178,33 +178,33 @@
 
   "Data": {
     "accountTypes": {
-      "article83": "Article83",
-      "asset": "Comptes d'actif",
-      "bank": "Comptes bancaires",
-      "capitalisation": "Comptes de capitalisation",
-      "cash": "Comptes de caisse",
-      "checkings": "Comptes courants",
-      "consumercredit": "Crédits à la consommation",
-      "creditcard": "Cartes de crédit",
-      "credit card": "Cartes de crédit",
-      "deposit": "Comptes de dépôt",
-      "joint": "Comptes joints",
-      "liability": "Comptes de dettes",
-      "lifeinsurance": "Assurances vie",
-      "loan": "Emprunts",
-      "madelin": "Contrats Madelin",
-      "market": "Market",
-      "mortgage": "Prêts immobiliers",
-      "none": "Aucun type",
-      "pea": "PEA",
-      "pee": "PEE",
-      "perco": "PERCO",
-      "perp": "PERP",
-      "resolvingcredit": "Crédits renouvelables",
-      "rsp": "RSP",
-      "savings": "Comptes d'épargne",
-      "unknown": "Inconnu",
-      "other": "Autres comptes"
+      "Article83": "Article83",
+      "Asset": "Comptes d'actif",
+      "Bank": "Comptes bancaires",
+      "Capitalisation": "Comptes de capitalisation",
+      "Cash": "Comptes de caisse",
+      "Checkings": "Comptes courants",
+      "ConsumerCredit": "Crédits à la consommation",
+      "CreditCard": "Cartes de crédit",
+      "Credit Card": "Cartes de crédit",
+      "Deposit": "Comptes de dépôt",
+      "Joint": "Comptes joints",
+      "Liability": "Comptes de dettes",
+      "LifeInsurance": "Assurances vie",
+      "Loan": "Emprunts",
+      "Madelin": "Contrats Madelin",
+      "Market": "Market",
+      "Mortgage": "Prêts immobiliers",
+      "None": "Aucun type",
+      "PEA": "PEA",
+      "PEE": "PEE",
+      "Perco": "PERCO",
+      "Perp": "PERP",
+      "ResolvingCredit": "Crédits renouvelables",
+      "RSP": "RSP",
+      "Savings": "Comptes d'épargne",
+      "Unknown": "Inconnu",
+      "Other": "Autres comptes"
     },
     "categories": {
       "uncategorized": "A catégoriser",
