refactor: Use the same account types translations everywhere

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -36,13 +36,7 @@
     "label": "Libellé",
     "institutionLabel": "Banque",
     "number": "Numéro",
-    "type": "Type",
-    "types": {
-      "Checkings": "Compte courant",
-      "Savings": "Compte d'épargne",
-      "CreditCard": "Carte de crédit",
-      "Loan": "Prêt"
-    }
+    "type": "Type"
   },
 
   "AccountSettings": {
