--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,13 +32,7 @@
     "label": "Label",
     "institutionLabel": "Bank",
     "number": "Number",
-    "type": "Type",
-    "types": {
-      "Checkings": "Checkings",
-      "Savings": "Savings",
-      "CreditCard": "Credit card",
-      "Loan": "Loan"
-    }
+    "type": "Type"
   },
 
   "AccountSettings": {
