--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -81,7 +81,13 @@
     "bank_name": "Nom de la banque",
     "account_number": "Numéro du compte",
     "add_bank": "Ajouter une banque",
-    "manage_accounts": "Organiser mes comptes"
+    "manage_accounts": "Organiser mes comptes",
+    "updated_at": {
+      "yesterday": "Hier",
+      "today": "Aujourd'hui",
+      "n_days_ago": "Il y a %{nbDays} jours",
+      "unknown": "NC"
+    }
   },
 
   "Transactions": {
