feat(Balance): Update balance subtitle on accounts check/uncheck

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -522,7 +522,8 @@
   },
 
   "BalanceHistory": {
-    "subtitle": "All accounts"
+    "all_accounts": "All accounts",
+    "checked_accounts": "%{nbCheckedAccounts}/%{nbAccounts} accounts"
   },
 
   "LogoutModal": {
