--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -71,6 +71,7 @@
 
   "Balance": {
     "title": "Solde actuel",
+    "nb_accounts": "%{nbCheckedAccounts}/%{smart_count} comptes activé |||| %{nbCheckedAccounts}/%{smart_count} comptes activés",
     "subtitle": {
       "all": "Total de tous vos comptes",
       "group": "Total du groupe %{label}",
