--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,7 +19,10 @@
   },
   "Error": {
     "more-information": "More information",
-    "less-information": "Less information"
+    "less-information": "Less information",
+    "title": "We failed to display your bank data",
+    "update": "You can try #{LINK}to reload the page#{/LINK}.",
+    "contact": "Do not hesitate #{LINK}to contact us#{/LINK} if the problem persists."
   },
   "AccountSwitch": {
     "account_counter": "%{smart_count} account |||| %{smart_count} accounts",
