feat: Show Debug panel in settings if flag('debug')

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -415,7 +415,8 @@
     "accounts": "Accounts",
     "groups": "Groups",
     "configuration": "Configuration",
-    "app": "App"
+    "app": "App",
+    "debug": "Debug"
   },
 
   "AppSettings": {
