--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -426,7 +426,8 @@
     "title": "Paramètres",
     "accounts": "Comptes",
     "groups": "Groupes",
-    "configuration": "Configuration"
+    "configuration": "Configuration",
+    "debug": "Debug"
   },
 
   "Onboarding": {
