feat: Handle Reimbursements account type

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -123,6 +123,7 @@
       "Loan": "Loan accounts",
       "LongTermSavings": "Long term savings",
       "Other": "Other accounts",
+      "Reimbursements": "Reimbursements tracking",
       "Savings": "Saving accounts"
     },
     "categories": {
