feat(locales): Update reimbursements account type translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -123,7 +123,7 @@
       "Loan": "Loan accounts",
       "LongTermSavings": "Long term savings",
       "Other": "Other accounts",
-      "Reimbursements": "Reimbursements tracking",
+      "Reimbursements": "Awaiting reimbursements",
       "Savings": "Saving accounts"
     },
     "categories": {
