--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -192,7 +192,7 @@
       "Loan": "Emprunts",
       "LongTermSavings": "Épargne long terme",
       "Other": "Autres comptes",
-      "Reimbursements": "Suivi remboursements",
+      "Reimbursements": "Remboursements en attente",
       "Savings": "Épargne"
     },
     "categories": {
