feat(Nav): Update balance tab translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,7 +14,7 @@
     "settings": "Settings",
     "savings": "Savings",
     "projections": "Forecasts",
-    "balance": "Current balance",
+    "my-accounts": "My accounts",
     "movements": "Transactions"
   },
   "Error": {
