--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -28,7 +28,7 @@
 
   "Nav": {
     "movements": "Mouvements",
-    "balance": "Solde actuel",
+    "my-accounts": "Mes comptes",
     "categorisation": "Catégorisation",
     "projections": "Prévisions",
     "savings": "Economiser",
