--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,8 +14,7 @@
     "settings": "Settings",
     "savings": "Savings",
     "projections": "Forecasts",
-    "my-accounts": "My accounts",
-    "movements": "Transactions"
+    "my-accounts": "My accounts"
   },
   "Error": {
     "more-information": "More information",
